Just minor fixes